@@ -11,6 +11,7 @@
     * numpy is not used anymore in the weather station.
     * improved use of comprehension list where it is possible.
     * improved the computation of min and max tick values in time series section.
+    * changed the way postgresql, database and tables are checked.
     * few corrections.
 
   * ADDED
